pyrsistent (0.14.11-3) perfsonar-4.3-staging; urgency=low

  * Building Python3 module only.

 -- Antoine Delvaux <antoine.delvaux@man.poznan.pl>  Tue, 21 Apr 2020 17:53:00 +0000

pyrsistent (0.14.11-2) perfsonar-minor-staging; urgency=low

  * Building for Python3 under Stretch

 -- Antoine Delvaux <antoine.delvaux@man.poznan.pl>  Wed, 24 Jul 2019 12:58:57 +0000

pyrsistent (0.14.11-1) perfsonar-minor-staging; urgency=low

  * New upstream version.

 -- Valentin Vidic <Valentin.Vidic@CARNet.hr>  Wed, 10 Apr 2019 15:47:08 +0000

pyrsistent (0.14.10-1) unstable; urgency=low

  * Initial upload.

 -- Andrej Shadura <andrewsh@debian.org>  Sat, 09 Feb 2019 12:50:44 +0100