@@ -1,0 +1,5 @@
+# These are generated by the Makefile
+compat
+control
+gbp.conf
+rules
