@@ -19,9 +19,13 @@ Homepage: http://github.com/tobgu/pyrsistent/
 Vcs-Browser: https://salsa.debian.org/python-team/modules/pyrsistent
 Vcs-Git: https://salsa.debian.org/python-team/modules/pyrsistent.git
 
-Package: python3-pyrsistent
+Package: python3-pyrsistent-d10
 Architecture: any
 Multi-Arch: same
+Conflicts: python3-pyrsistent, python3-pyrsistent-d11, python3-pyrsistent-u18, python3-pyrsistent-u20
+Provides: python3-pyrsistent
+Recommends:
+ ${python3:Recommends}
 Depends:
  ${misc:Depends},
  ${python3:Depends},
