@@ -1,0 +1,11 @@
+[DEFAULT]
+# default build command and distro used to build package
+builder = DIST=bionic /usr/bin/git-pbuilder
+# tell git-buildpackage how to clean the source tree
+cleaner = fakeroot debian/rules clean
+# default branch for upstream sources and debian packaging (should usually be equal for pS)
+upstream-branch = 5.0.0
+debian-branch = 5.0.0
+# the default tag formats used:
+upstream-tag = v%(version)s
+debian-tag = debian/bionic/%(version)s
